--- a/ViewUpdateSparePart.ui
+++ b/ViewUpdateSparePart.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>UpdateSparePart</class>
- <widget class="QDialog" name="UpdateSparePart">
+ <class>ViewUpdateSparePart</class>
+ <widget class="QDialog" name="ViewUpdateSparePart">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>591</width>
-    <height>282</height>
+    <height>244</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@ QMessageBox {
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="4" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="errorLabel">
      <property name="font">
       <font>
@@ -40,15 +40,25 @@ QMessageBox {
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QPushButton" name="backToViewInfoButton">
-     <property name="minimumSize">
+   <item row="2" column="1">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
       <size>
        <width>40</width>
-       <height>40</height>
+       <height>20</height>
       </size>
      </property>
-     <property name="maximumSize">
+    </spacer>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="saveUpdatedInfo">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="minimumSize">
       <size>
        <width>40</width>
        <height>40</height>
@@ -75,7 +85,7 @@ QPushButton:pressed {
      </property>
      <property name="icon">
       <iconset resource="images.qrc">
-       <normaloff>:/images/backToView.png</normaloff>:/images/backToView.png</iconset>
+       <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -88,7 +98,7 @@ QPushButton:pressed {
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="4">
+   <item row="1" column="0" colspan="3">
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="1">
       <widget class="QLabel" name="label_2">
@@ -129,6 +139,9 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="1" column="0">
@@ -145,6 +158,9 @@ QPushButton:pressed {
     background-color: #dbdcf7;
 	padding-left: 3px;
 }</string>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -175,6 +191,9 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="0" column="0">
@@ -203,6 +222,9 @@ QPushButton:pressed {
     background-color: #dbdcf7;
 	padding-left: 3px;
 }</string>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -245,6 +267,9 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="3" column="1">
@@ -262,17 +287,29 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
    </item>
-   <item row="4" column="3">
-    <widget class="QPushButton" name="saveUpdatedInfo">
+   <item row="0" column="0">
+    <widget class="QPushButton" name="updateSparePartInfoButton">
      <property name="minimumSize">
       <size>
        <width>40</width>
        <height>40</height>
       </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="toolTip">
+      <string>Редактировать информацию</string>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
@@ -295,44 +332,18 @@ QPushButton:pressed {
      </property>
      <property name="icon">
       <iconset resource="images.qrc">
-       <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
+       <normaloff>:/images/edit.png</normaloff>:/images/edit.png</iconset>
      </property>
      <property name="iconSize">
       <size>
-       <width>27</width>
-       <height>27</height>
+       <width>32</width>
+       <height>32</height>
       </size>
      </property>
      <property name="autoDefault">
       <bool>false</bool>
      </property>
     </widget>
-   </item>
-   <item row="4" column="2">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="2" colspan="2">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
@@ -344,7 +355,6 @@ QPushButton:pressed {
   <tabstop>isOriginalLine</tabstop>
   <tabstop>priceLine</tabstop>
   <tabstop>saveUpdatedInfo</tabstop>
-  <tabstop>backToViewInfoButton</tabstop>
  </tabstops>
  <resources>
   <include location="images.qrc"/>
