--- a/ViewUpdateTask.ui
+++ b/ViewUpdateTask.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>UpdateTask</class>
- <widget class="QDialog" name="UpdateTask">
+ <class>ViewUpdateTask</class>
+ <widget class="QDialog" name="ViewUpdateTask">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>526</width>
-    <height>403</height>
+    <width>448</width>
+    <height>362</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,16 +23,22 @@ QMessageBox {
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_4">
-   <item row="0" column="0">
-    <widget class="QPushButton" name="backToViewInfoButton">
+   <item row="0" column="1">
+    <widget class="QPushButton" name="updateTaskButton">
      <property name="minimumSize">
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
+     <property name="maximumSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
+     </property>
      <property name="toolTip">
-      <string>Вернуться</string>
+      <string>Редактировать информацию</string>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
@@ -55,31 +61,18 @@ QPushButton:pressed {
      </property>
      <property name="icon">
       <iconset resource="images.qrc">
-       <normaloff>:/images/backToView.png</normaloff>:/images/backToView.png</iconset>
+       <normaloff>:/images/edit.png</normaloff>:/images/edit.png</iconset>
      </property>
      <property name="iconSize">
       <size>
-       <width>27</width>
-       <height>27</height>
+       <width>32</width>
+       <height>32</height>
       </size>
      </property>
      <property name="autoDefault">
       <bool>false</bool>
      </property>
     </widget>
-   </item>
-   <item row="0" column="1">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="1" column="0" colspan="2">
     <layout class="QGridLayout" name="gridLayout_2">
@@ -256,6 +249,9 @@ QPushButton:pressed {
            <height>25</height>
           </size>
          </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
          <property name="tristate">
           <bool>false</bool>
          </property>
@@ -282,6 +278,9 @@ QPushButton:pressed {
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="1" column="2">
       <widget class="QPushButton" name="saveUpdatedInfo">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>40</width>
@@ -331,6 +330,19 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
+     <item row="1" column="0" colspan="2">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item row="0" column="0" colspan="3">
       <widget class="QTextEdit" name="contentLine">
        <property name="font">
@@ -346,25 +358,28 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
        <property name="placeholderText">
         <string>Текст задания</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
     </layout>
+   </item>
+   <item row="0" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
@@ -374,7 +389,6 @@ QPushButton:pressed {
   <tabstop>checkBox</tabstop>
   <tabstop>contentLine</tabstop>
   <tabstop>saveUpdatedInfo</tabstop>
-  <tabstop>backToViewInfoButton</tabstop>
  </tabstops>
  <resources>
   <include location="images.qrc"/>
