--- a/ViewUpdateOrder.ui
+++ b/ViewUpdateOrder.ui
@@ -578,6 +578,12 @@ QMessageBox {
            <height>0</height>
           </size>
          </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>20</height>
+          </size>
+         </property>
          <property name="font">
           <font>
            <pointsize>10</pointsize>
@@ -653,6 +659,12 @@ QMessageBox {
            <height>0</height>
           </size>
          </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>20</height>
+          </size>
+         </property>
          <property name="font">
           <font>
            <pointsize>10</pointsize>
@@ -689,6 +701,12 @@ QMessageBox {
           <size>
            <width>0</width>
            <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>20</height>
           </size>
          </property>
          <property name="font">
@@ -825,7 +843,7 @@ QMessageBox {
         </widget>
        </item>
        <item row="1" column="2">
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="mileageLine">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
@@ -917,6 +935,9 @@ QMessageBox {
      </property>
      <item>
       <widget class="QFrame" name="sparePartsFrame">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>845</width>
@@ -1056,6 +1077,9 @@ QMessageBox {
     padding: 0 4px;
 }</string>
              </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
              <property name="placeholderText">
               <string>Поиск</string>
              </property>
@@ -1077,35 +1101,11 @@ QMessageBox {
           </layout>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QTextEdit" name="sparePartsList">
-          <property name="maximumSize">
-           <size>
-            <width>250</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>9</pointsize>
-           </font>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QTextEdit {
-	background-color: white;
-	border-top-left-radius: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-left-radius: 6px;
-	border-bottom-right-radius: 6px;
-}</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="0">
          <widget class="QTableView" name="availableSparePartsTable">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="maximumSize">
            <size>
             <width>585</width>
@@ -1156,11 +1156,41 @@ QHeaderView::section {
           </property>
          </widget>
         </item>
+        <item row="1" column="1">
+         <widget class="QTextEdit" name="sparePartsList">
+          <property name="maximumSize">
+           <size>
+            <width>250</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QTextEdit {
+	background-color: white;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
+}</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
      <item>
       <widget class="QFrame" name="employeesFrame">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>720</width>
@@ -1198,6 +1228,9 @@ QHeaderView::section {
         </property>
         <item row="2" column="0" rowspan="8">
          <widget class="QTableView" name="employeesByServiceTable">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimumSize">
            <size>
             <width>370</width>
@@ -1283,6 +1316,9 @@ QHeaderView::section {
            </property>
            <item row="3" column="1">
             <widget class="QPushButton" name="clearDiagnosticianButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -1425,6 +1461,9 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
              </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
           </layout>
@@ -1542,10 +1581,16 @@ QPushButton:pressed {
 	padding-left: 3px;
 }</string>
              </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item row="3" column="1">
             <widget class="QPushButton" name="clearLocksmithButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -1797,6 +1842,9 @@ QPushButton:pressed {
            </item>
            <item row="4" column="2">
             <widget class="QPushButton" name="clearMechanicButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -1877,6 +1925,9 @@ QPushButton:pressed {
              <property name="inputMask">
               <string/>
              </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
           </layout>
@@ -1951,6 +2002,9 @@ QPushButton:pressed {
            </item>
            <item row="3" column="1">
             <widget class="QPushButton" name="clearElectronicButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -2027,6 +2081,9 @@ QPushButton:pressed {
     background-color: #dbdcf7;
 	padding-left: 3px;
 }</string>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -2156,6 +2213,9 @@ QPushButton:pressed {
            </item>
            <item row="3" column="1">
             <widget class="QPushButton" name="clearWasherButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -2232,6 +2292,9 @@ QPushButton:pressed {
     background-color: #dbdcf7;
 	padding-left: 3px;
 }</string>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -2324,6 +2387,9 @@ QPushButton:pressed {
              <property name="inputMask">
               <string/>
              </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item row="2" column="0" colspan="2">
@@ -2346,6 +2412,9 @@ QPushButton:pressed {
            </item>
            <item row="3" column="1">
             <widget class="QPushButton" name="clearMechanic2Button">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -2592,6 +2661,9 @@ QPushButton:pressed {
 	border-bottom-right-radius: 6px;
 }</string>
           </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
        </layout>
@@ -2601,55 +2673,18 @@ QPushButton:pressed {
    </item>
    <item row="3" column="0" colspan="3">
     <layout class="QGridLayout" name="gridLayout_7">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_11">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
+     <item row="4" column="1">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
-       <property name="text">
-        <string>Отзыв клиента</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" rowspan="2" colspan="3">
-      <widget class="QLabel" name="label_31">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Дата / время приема</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1" colspan="3">
-      <widget class="QLineEdit" name="receptionLine">
-       <property name="minimumSize">
+       <property name="sizeHint" stdset="0">
         <size>
-         <width>160</width>
-         <height>0</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
-}</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
+      </spacer>
      </item>
      <item row="1" column="0" rowspan="5">
       <widget class="QTextEdit" name="feedback">
@@ -2680,66 +2715,31 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
-      <widget class="QPushButton" name="openMapButton">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>40</width>
-         <height>40</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>40</width>
-         <height>40</height>
-        </size>
-       </property>
+     <item row="1" column="1" rowspan="2" colspan="2">
+      <widget class="QLabel" name="label_31">
        <property name="font">
         <font>
-         <pointsize>10</pointsize>
+         <pointsize>9</pointsize>
         </font>
        </property>
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton {
-	background-color: #dbdcf7;
-	border: 1px solid #999999;
-}
-
-QPushButton:hover {
-	background-color: #d5d6f0;
-	border: 1px solid #acacac;
-}
-
-QPushButton:pressed {
-	background-color: #cbcde6;
-	border: 2px solid #999999;
-}</string>
-       </property>
        <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="images.qrc">
-         <normaloff>:/images/map.png</normaloff>:/images/map.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>36</width>
-         <height>36</height>
-        </size>
-       </property>
-       <property name="autoDefault">
-        <bool>false</bool>
+        <string>Дата / время приема</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="3">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Отзыв клиента</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="2">
       <widget class="QPushButton" name="saveUpdatedInfo">
        <property name="enabled">
         <bool>false</bool>
@@ -2796,18 +2796,31 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
+     <item row="3" column="1" colspan="2">
+      <widget class="QLineEdit" name="receptionLine">
+       <property name="minimumSize">
         <size>
-         <width>20</width>
-         <height>40</height>
+         <width>160</width>
+         <height>0</height>
         </size>
        </property>
-      </spacer>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -2879,7 +2892,7 @@ QPushButton:pressed {
   <tabstop>modelLine</tabstop>
   <tabstop>emailLine</tabstop>
   <tabstop>yearLine</tabstop>
-  <tabstop>lineEdit</tabstop>
+  <tabstop>mileageLine</tabstop>
   <tabstop>VIN_Line</tabstop>
   <tabstop>autoLicensePlateLine</tabstop>
   <tabstop>serviceComboBox</tabstop>
@@ -2902,7 +2915,6 @@ QPushButton:pressed {
   <tabstop>worksList</tabstop>
   <tabstop>feedback</tabstop>
   <tabstop>receptionLine</tabstop>
-  <tabstop>openMapButton</tabstop>
   <tabstop>saveUpdatedInfo</tabstop>
  </tabstops>
  <resources>
