--- a/ViewUpdateOrder.ui
+++ b/ViewUpdateOrder.ui
@@ -1157,28 +1157,38 @@ QHeaderView::section {
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QTextEdit" name="sparePartsList">
-          <property name="maximumSize">
-           <size>
-            <width>250</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>9</pointsize>
-           </font>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
+         <widget class="QTableView" name="usedSparePartsTableView">
+          <property name="enabled">
+           <bool>false</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">QTextEdit {
+           <string notr="true">QTableView {
 	background-color: white;
+	border: 1px solid grey;
 	border-top-left-radius: 0px;
 	border-top-right-radius: 0px;
 	border-bottom-left-radius: 6px;
 	border-bottom-right-radius: 6px;
+    selection-color: black; 
+	selection-background-color: #f2e7ff;
+}
+
+QLabel {
+	background-color: transparent;
+	border-radius: 0px;
+	border: 0px;
+	font-size: 9pt;
+}
+
+QHeaderView {
+	border-radius: 0px;
+	background-color: #f5f5f5;
+	font-size: 9pt;
+	border: 0px;
+}
+
+QHeaderView::section {
+	background-color: white;
 }</string>
           </property>
          </widget>
@@ -2673,19 +2683,6 @@ QPushButton:pressed {
    </item>
    <item row="3" column="0" colspan="3">
     <layout class="QGridLayout" name="gridLayout_7">
-     <item row="4" column="1">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="1" column="0" rowspan="5">
       <widget class="QTextEdit" name="feedback">
        <property name="maximumSize">
@@ -2822,6 +2819,19 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
+     <item row="4" column="1" colspan="2">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
    </item>
    <item row="0" column="1" colspan="2">
@@ -2899,7 +2909,6 @@ QPushButton:pressed {
   <tabstop>discountsComboBox</tabstop>
   <tabstop>orderStatusComboBox</tabstop>
   <tabstop>sparePartsSearch</tabstop>
-  <tabstop>sparePartsList</tabstop>
   <tabstop>mechanicHoursLine</tabstop>
   <tabstop>clearMechanicButton</tabstop>
   <tabstop>mechanic2HoursLine</tabstop>
